Pre-publication code cleanup

--- a/Fig2/Fig2A.ipynb
+++ b/Fig2/Fig2A.ipynb
@@ -13,6 +13,7 @@
    "source": [
     "'''\n",
     "Notebook for FIG2A - produce an illustration of bifurcation analysis for the Punisher\n",
+    "(plots also used in FIGS9)\n",
     "'''\n",
     "# By Kirill Sechkar\n",
     "\n",
@@ -135,8 +136,8 @@
     "# For the purposes of illustration, we use different parameters to those of the circuit in other simulations\n",
     "\n",
     "# burdensome gene\n",
-    "par['c_b'] = 100.0\n",
-    "par['a_b'] = 2000.0\n",
+    "par['c_b'] = 100.0  # gene concentration (nM)\n",
+    "par['a_b'] = 2000.0 # promoter strength (unitless)\n",
     "\n",
     "# punisher\n",
     "par['c_switch'] = 10.0  # gene concentration (nM)\n",
@@ -156,8 +157,8 @@
     "par['p_switch_ac_frac'] = 0.45  # 0.75  # active fraction of protein (i.e. share of molecules bound by the inducer)\n",
     "\n",
     "# culture medium\n",
-    "init_conds['s'] = 0.3\n",
-    "par['h_ext'] = 10.5 * (10.0 ** 3)"
+    "init_conds['s'] = 0.5   # nutrient quality (unitless)\n",
+    "par['h_ext'] = 10.5 * (10.0 ** 3)   # extracellular chloramphenicol concentration (nM)"
    ],
    "id": "cd655545ca1bd32e",
    "outputs": [],
