--- a/Fig2/Fig2BC.ipynb
+++ b/Fig2/Fig2BC.ipynb
@@ -136,17 +136,17 @@
     "# SPECIFY THE CIRCUIT'S DEFAULT PARAMETERS\n",
     "\n",
     "# BURDENSOME SYNTHETIC GENE\n",
-    "par['c_b'] = 1\n",
-    "par['a_b'] = 1e5\n",
+    "par['c_b'] = 1  # gene concentration (nM)\n",
+    "par['a_b'] = 1e5    # promoter strength (unitless)\n",
     "\n",
     "# PUNISHER\n",
     "# switch gene conc\n",
     "par['c_switch'] = 10.0  # gene concentration (nM)\n",
     "par['a_switch'] = 400.0  # promoter strength (unitless)\n",
-    "par['d_switch']=0.01836\n",
+    "par['d_switch']=0.01836  # rate of protein degradation per protease molecule (1/nM/h)\n",
     "# integrase - expressed from the switch gene's operon, not its own gene => c_int, a_int irrelevant\n",
     "par['k+_int'] = par['k+_switch']/80.0  # RBS weaker than for the switch gene\n",
-    "par['d_int'] = 0.0#0.01836 # rate of integrase degradation per protease molecule (1/nM/h)\n",
+    "par['d_int'] = 0.0 # rate of integrase degradation per protease molecule (1/nM/h)\n",
     "# CAT (antibiotic resistance) gene\n",
     "init_conds['cat_pb'] = 10.0  # gene concentration (nM) - INITIAL CONDITION< NOT PARAMETER as it can be cut out by the integrase\n",
     "par['a_cat'] = 500.0  # promoter strength (unitless)\n",
@@ -159,12 +159,11 @@
     "par['K_switch'] = 300.0  # Half-saturation constant for the self-activating switch gene promoter (nM)\n",
     "par['eta_switch'] = 2 # Hill coefficient for the self-activating switch gene promoter (unitless)\n",
     "par['baseline_switch'] = 0.025  # Baseline value of the switch gene's transcription activation function\n",
-    "par['baseline_switch_alt'] = 0\n",
     "par['p_switch_ac_frac'] = 0.85  # active fraction of protein (i.e. share of molecules bound by the inducer)\n",
     "\n",
     "# CULTURE MEDIUM\n",
-    "init_conds['s'] = 0.5\n",
-    "par['h_ext'] = 10.5 * (10.0 ** 3)"
+    "init_conds['s'] = 0.5   # nutrient quality (unitless)\n",
+    "par['h_ext'] = 10.5 * (10.0 ** 3)   # extracellular chloramphenicol concentration (nM)"
    ],
    "id": "b838ab2e01307e1e",
    "outputs": [],
