--- a/FigS2S3/FigS3.ipynb
+++ b/FigS2S3/FigS3.ipynb
@@ -151,7 +151,7 @@
     "    init_conds['m_tog' + str(togswitchnum) + '1'] = 4000\n",
     "\n",
     "# CULTURE MEDIUM\n",
-    "init_conds['s'] = 0.5\n",
+    "init_conds['s'] = 0.5   # nutrient quality (unitless)\n",
     "par['h_ext'] = 0 # no CAT as the essenbtial gene => no chloramphenicol added to the medium\n",
     "\n",
     "# back up the system parameters\n",
@@ -181,8 +181,8 @@
     "\n",
     "# SIMULATION TIME FRAMES\n",
     "# getting the initial state\n",
-    "tf_premut = (0,50+savetimestep/2) # time frame for simulation before the toggle genes  utate\n",
-    "tf_mut=(50,85+savetimestep/2)"
+    "tf_premut = (0,50+savetimestep/2) # time frame for simulation before the toggle genes mutate\n",
+    "tf_mut=(50,85+savetimestep/2)   # time frame for simulation after the toggle genes mutate"
    ],
    "id": "1b8f712b4f5f121f",
    "outputs": [],
@@ -441,7 +441,7 @@
     "        par['k+_cat' + str(togswitchnum) + str(toggenenum)] = 60/250  # ribosome binding rate (/h/nM)\n",
     "\n",
     "# CULTURE MEDIUM\n",
-    "init_conds['s'] = 0.5\n",
+    "init_conds['s'] = 0.5   # nutrient quality (unitless)\n",
     "par['h_ext'] = 10.5 * (10.0 ** 3)  # no CAT as the essential gene => add chloramphenicol to the medium\n",
     "\n",
     "# back up the system parameters\n",
