--- a/FigS4/FigS4e.ipynb
+++ b/FigS4/FigS4e.ipynb
@@ -135,8 +135,8 @@
     "# SPECIFY THE CIRCUIT'S DEFAULT PARAMETERS\n",
     "\n",
     "# BURDENSOME SYNTHETIC GENE\n",
-    "par['c_b'] = 1\n",
-    "par['a_b'] = 1e5\n",
+    "par['c_b'] = 1  # gene concentration (nM)\n",
+    "par['a_b'] = 1e5    # promoter strength (unitless)\n",
     "\n",
     "# PUNISHER\n",
     "# switch gene conc\n",
@@ -158,12 +158,11 @@
     "par['K_switch'] = 300.0  # Half-saturation constant for the self-activating switch gene promoter (nM)\n",
     "par['eta_switch'] = 2 # Hill coefficient for the self-activating switch gene promoter (unitless)\n",
     "par['baseline_switch'] = 0.025  # Baseline value of the switch gene's transcription activation function\n",
-    "par['baseline_switch_alt'] = 0\n",
     "par['p_switch_ac_frac'] = 0.85  # active fraction of protein (i.e. share of molecules bound by the inducer)\n",
     "\n",
     "# CULTURE MEDIUM\n",
-    "init_conds['s'] = 0.5\n",
-    "par['h_ext'] = 10.5 * (10.0 ** 3)"
+    "init_conds['s'] = 0.5   # nutrient quality (unitless)\n",
+    "par['h_ext'] = 10.5 * (10.0 ** 3)   # chloramphenicol concentration in the medium (nM)"
    ],
    "id": "b838ab2e01307e1e",
    "outputs": [],
