--- a/FigS5/FigS5.ipynb
+++ b/FigS5/FigS5.ipynb
@@ -130,18 +130,18 @@
     "# PARAMETERISE THE CIRCUIT\n",
     "\n",
     "# BURDENSOME SYNTHETIC GENE\n",
-    "par['c_b'] = 1\n",
-    "par['a_b'] = 50\n",
+    "par['c_b'] = 1  # gene concentration (nM)\n",
+    "par['a_b'] = 50 # promoter strength (unitless)\n",
     "par['g_b'] = 0.002   # metabolic burden (unitless)\n",
     "\n",
     "# PUNISHER\n",
     "# switch gene conc\n",
     "par['c_switch'] = 10.0  # gene concentration (nM)\n",
     "par['a_switch'] = 400.0  # promoter strength (unitless)\n",
-    "par['d_switch']=0.01836\n",
+    "par['d_switch']=0.01836 # rate of switch protein degradation per protease molecule (1/nM/h)\n",
     "# integrase - expressed from the switch gene's operon, not its own gene => c_int, a_int irrelevant\n",
     "par['k+_int'] = par['k+_switch']/80.0  # RBS weaker than for the switch gene\n",
-    "par['d_int'] = 0.0#0.01836 # rate of integrase degradation per protease molecule (1/nM/h)\n",
+    "par['d_int'] = 0.0  # rate of integrase degradation per protease molecule (1/nM/h)\n",
     "# CAT (antibiotic resistance) gene\n",
     "init_conds['cat_pb'] = 10.0  # gene concentration (nM) - INITIAL CONDITION< NOT PARAMETER as it can be cut out by the integrase\n",
     "par['a_cat'] = 500.0  # promoter strength (unitless)\n",
@@ -158,8 +158,8 @@
     "par['p_switch_ac_frac'] = 0.85  # active fraction of protein (i.e. share of molecules bound by the inducer)\n",
     "\n",
     "# CULTURE MEDIUM\n",
-    "init_conds['s'] = 0.5\n",
-    "par['h_ext'] = 10.5 * (10.0 ** 3)"
+    "init_conds['s'] = 0.5   # nutrient quality (unitless)\n",
+    "par['h_ext'] = 10.5 * (10.0 ** 3)   # nutrient concentration (nM)"
    ],
    "id": "4b8dca372274293b",
    "outputs": [],
@@ -182,7 +182,7 @@
     "atol = 1e-6  # absolute tolerance for the ODE solver\n",
     "\n",
     "# simulation time frames - add half of the save time step to the end to include the last time point\n",
-    "tf_nopun = (0,25+savetimestep/2)\n",
+    "tf_nopun = (0,25+savetimestep/2)    # time frame for simulation before the punisher is assumed to be present (get to the steady state without premature triggering)\n",
     "tf_pun = (25,50+savetimestep/2) # time frame for simulation before burdensome gene loss\n",
     "tf_afterloss = (50,100+savetimestep/2) # time frame for simulation after burdensome gene loss"
    ],
