--- a/FigS6/FigS6.ipynb
+++ b/FigS6/FigS6.ipynb
@@ -129,16 +129,16 @@
     "# PARAMETERISE THE CIRCUIT\n",
     "\n",
     "# BURDENSOME SYNTHETIC GENE\n",
-    "par['c_b'] = 1\n",
-    "par['a_b'] = 1e5\n",
+    "par['c_b'] = 1  # gene concentration (nM))\n",
+    "par['a_b'] = 1e5    # promoter strength (unitless)\n",
     "\n",
     "# PUNISHER\n",
     "# switch gene conc\n",
     "par['a_switch'] = 400.0  # promoter strength (unitless)\n",
-    "par['d_switch']=0.01836\n",
+    "par['d_switch']=0.01836 # rate of protein degradation per protease molecule (1/nM/h)\n",
     "# integrase - expressed from the switch gene's operon, not its own gene => c_int, a_int irrelevant\n",
     "par['k+_int'] = par['k+_switch']/80.0  # RBS weaker than for the switch gene\n",
-    "par['d_int'] = 0.0#0.01836 # rate of integrase degradation per protease molecule (1/nM/h)\n",
+    "par['d_int'] = 0.0 # rate of integrase degradation per protease molecule (1/nM/h)\n",
     "# CAT (antibiotic resistance) gene\n",
     "par['a_cat'] = 500.0  # promoter strength (unitless)\n",
     "par['n_cat'] = 300.0\n",
@@ -160,14 +160,9 @@
     "par['n_inh'] = 10 # number of steps of replication initiation at which inhibition can happen\n",
     "par['K_inh'] = 214.05 # replication inhibition constant (nM)\n",
     "\n",
-    "# l_cruise=1.34\n",
-    "# steady_inh_cruise=par['a_inh']*10/(par['b_inh']+l_cruise)\n",
-    "# par['K_inh']=steady_inh_cruise*1/((par['k_tr']/l_cruise)**(1/par['n_inh'])-1)\n",
-    "# print(steady_inh_cruise,par['K_inh'])\n",
-    "\n",
     "# CULTURE MEDIUM\n",
-    "init_conds['s'] = 0.5\n",
-    "par['h_ext'] = 10.5 * (10.0 ** 3)"
+    "init_conds['s'] = 0.5   # nutrient quality (unitless)\n",
+    "par['h_ext'] = 10.5 * (10.0 ** 3)   # chloramphenicol concentration in the medium (nM)"
    ],
    "id": "4b8dca372274293b",
    "outputs": [],
@@ -223,7 +218,7 @@
     "atol = 1e-6  # absolute tolerance for the ODE solver\n",
     "\n",
     "# simulation time frames - add half of the save time step to the end to include the last time point\n",
-    "tf_nopun = (0,25+savetimestep/2)\n",
+    "tf_nopun = (0,25+savetimestep/2)    # time frame for simulation before the punisher is assumed to be present (get to the steady state without premature triggering)\n",
     "tf_pun = (25,50+savetimestep/2) # time frame for simulation before burdensome gene loss\n",
     "tf_afterloss = (50,100+savetimestep/2) # time frame for simulation after burdensome gene loss"
    ],
