--- a/FigS7/FigS7.ipynb
+++ b/FigS7/FigS7.ipynb
@@ -131,8 +131,8 @@
     "# PARAMETERISE THE CIRCUIT\n",
     "\n",
     "# BURDENSOME SYNTHETIC GENE\n",
-    "par['c_b'] = 1\n",
-    "par['a_b'] = 1e5\n",
+    "par['c_b'] = 1.0 # gene concentration (nM) - a parameter in the fixed-volume model\n",
+    "par['a_b'] = 1e5    # promoter strength (unitless)\n",
     "\n",
     "# PUNISHER\n",
     "# switch gene conc\n",
@@ -173,9 +173,9 @@
     "\n",
     "# culture medium\n",
     "nutr_qual = 0.5\n",
-    "par['s'] = nutr_qual  # nutrient quality (unitless)\n",
-    "init_conds['s'] = nutr_qual  # nutrient quality (unitless)\n",
-    "par['h_ext'] = 10.5 * (10.0 ** 3)"
+    "par['s'] = nutr_qual  # nutrient quality (unitless) - a parameter in the variable-volume model\n",
+    "init_conds['s'] = nutr_qual  # nutrient quality (unitless) - a variable in the fixed-volume model\n",
+    "par['h_ext'] = 10.5 * (10.0 ** 3)   # chloramphenicol concentration in the medium (nM)"
    ],
    "id": "4b8dca372274293b",
    "outputs": [],
@@ -285,69 +285,52 @@
    "cell_type": "code",
    "source": [
     "# VARIABLE-VOLUME SIMULATION WITH VARIABLE CELL VOLUME - RUN\n",
-    "# mRNA_count_scales, S, x0_tauleap, circuit_synpos2genename, keys0, \\\n",
-    "#         rep_phase_means_stdevs_bounds = tauleap_sim_prep_varvol(par, len(circuit_genes),\n",
-    "#                                                                 len(circuit_miscs),\n",
-    "#                                                                 circuit_name2pos,\n",
-    "#                                                                 det_steady_x,\n",
-    "#                                                                 key_seeds=[0]\n",
-    "#                                                                 )\n",
-    "# x0_tauleap[6]=1.0 # start at the default volume of 1 um^3\n",
-    "# par['a_b']=par['a_b']*a_b_scale # apply the scaling factor to the burdensome gene transcription rate\n",
-    "# ts_jnp_preloss, xs_jnp_preloss, final_keys_preloss = tauleap_sim_varvol(par,  # dictionary with model parameters\n",
-    "#                                          circuit_v,  # circuit reaction propensity calculator\n",
-    "#                                          circuit_eff_m_het_div_k_het,\n",
-    "#                                          x0_tauleap,     # initial condition VECTOR (processed to make sure random variables are appropriate integers)\n",
-    "#                                          len(circuit_genes), len(circuit_miscs), circuit_name2pos,\n",
-    "#                                          cellmodel_auxil.synth_gene_params_for_jax(par, circuit_genes), # synthetic gene parameters for calculating k values\n",
-    "#                                          tf_preloss, tau, tau_odestep, tau_savetimestep,    # simulation parameters: time frame, tau leap step size, number of ode integration steps in a single tau leap step\n",
-    "#                                          mRNA_count_scales, S, circuit_synpos2genename, # mRNA count scaling factor, stoichiometry matrix, synthetic gene number in list of synth. genes to name decoder\n",
-    "#                                          keys0, rep_phase_means_stdevs_bounds,\n",
-    "#                                          avg_dynamics=True)  # starting random number genereation key\n",
-    "# \n",
-    "# # concatenate the results with the deterministic simulation\n",
-    "# ts_preloss = np.concatenate((ts_fixedvol, np.array(ts_jnp_preloss)))\n",
-    "# xs_first_preloss = np.concatenate((xs_fixedvol, np.array(xs_jnp_preloss[1])))  # getting the results from the first random number generator key in vmap\n",
-    "# xss_preloss = np.concatenate((xs_fixedvol * np.ones((keys0.shape[0], 1, 1)), np.array(xs_jnp_preloss)),axis=1)  # getting the results from all vmapped trajectories\n",
-    "# \n",
-    "# # simulate after synthetic gene expression loss (if there is no loss)\n",
-    "# if(loss):\n",
-    "#     par['func_b'] = 0.0  # burdensome gene no longer present\n",
-    "# ts_jnp, xs_jnp, final_keys = tauleap_sim_varvol(par,  # dictionary with model parameters\n",
-    "#                                          circuit_v,  # circuit reaction propensity calculator\n",
-    "#                                          circuit_eff_m_het_div_k_het,\n",
-    "#                                          xs_jnp_preloss[:,-1,:],     # initial condition VECTOR\n",
-    "#                                          len(circuit_genes), len(circuit_miscs), circuit_name2pos,\n",
-    "#                                          cellmodel_auxil.synth_gene_params_for_jax(par, circuit_genes), # synthetic gene parameters for calculating k values\n",
-    "#                                          tf_afterloss, tau, tau_odestep, tau_savetimestep,    # simulation parameters: time frame, tau leap step size, number of ode integration steps in a single tau leap step\n",
-    "#                                          mRNA_count_scales, S, circuit_synpos2genename, # mRNA count scaling factor, stoichiometry matrix, synthetic gene number in list of synth. genes to name decoder\n",
-    "#                                          final_keys_preloss, rep_phase_means_stdevs_bounds,\n",
-    "#                                          avg_dynamics=True)  # starting random number genereation key\n",
-    "# # concatenate the results with the deterministic simulation\n",
-    "# ts = np.concatenate((ts_preloss, np.array(ts_jnp)))\n",
-    "# xs_first = np.concatenate((xs_first_preloss, np.array(xs_jnp[1])))  # getting the results from the first random number generator key in vmap\n",
-    "# xss = np.concatenate((xss_preloss, np.array(xs_jnp)), axis=1)  # getting the results from all vmapped trajectories"
+    "mRNA_count_scales, S, x0_tauleap, circuit_synpos2genename, keys0, \\\n",
+    "        rep_phase_means_stdevs_bounds = tauleap_sim_prep_varvol(par, len(circuit_genes),\n",
+    "                                                                len(circuit_miscs),\n",
+    "                                                                circuit_name2pos,\n",
+    "                                                                det_steady_x,\n",
+    "                                                                key_seeds=[0]\n",
+    "                                                                )\n",
+    "x0_tauleap[6]=1.0 # start at the default volume of 1 um^3\n",
+    "par['a_b']=par['a_b']*a_b_scale # apply the scaling factor to the burdensome gene transcription rate\n",
+    "ts_jnp_preloss, xs_jnp_preloss, final_keys_preloss = tauleap_sim_varvol(par,  # dictionary with model parameters\n",
+    "                                         circuit_v,  # circuit reaction propensity calculator\n",
+    "                                         circuit_eff_m_het_div_k_het,\n",
+    "                                         x0_tauleap,     # initial condition VECTOR (processed to make sure random variables are appropriate integers)\n",
+    "                                         len(circuit_genes), len(circuit_miscs), circuit_name2pos,\n",
+    "                                         cellmodel_auxil.synth_gene_params_for_jax(par, circuit_genes), # synthetic gene parameters for calculating k values\n",
+    "                                         tf_preloss, tau, tau_odestep, tau_savetimestep,    # simulation parameters: time frame, tau leap step size, number of ode integration steps in a single tau leap step\n",
+    "                                         mRNA_count_scales, S, circuit_synpos2genename, # mRNA count scaling factor, stoichiometry matrix, synthetic gene number in list of synth. genes to name decoder\n",
+    "                                         keys0, rep_phase_means_stdevs_bounds,\n",
+    "                                         avg_dynamics=True)  # starting random number genereation key\n",
+    "\n",
+    "# concatenate the results with the deterministic simulation\n",
+    "ts_preloss = np.concatenate((ts_fixedvol, np.array(ts_jnp_preloss)))\n",
+    "xs_first_preloss = np.concatenate((xs_fixedvol, np.array(xs_jnp_preloss[1])))  # getting the results from the first random number generator key in vmap\n",
+    "xss_preloss = np.concatenate((xs_fixedvol * np.ones((keys0.shape[0], 1, 1)), np.array(xs_jnp_preloss)),axis=1)  # getting the results from all vmapped trajectories\n",
+    "\n",
+    "# simulate after synthetic gene expression loss (if there is no loss)\n",
+    "if(loss):\n",
+    "    par['func_b'] = 0.0  # burdensome gene no longer present\n",
+    "ts_jnp, xs_jnp, final_keys = tauleap_sim_varvol(par,  # dictionary with model parameters\n",
+    "                                         circuit_v,  # circuit reaction propensity calculator\n",
+    "                                         circuit_eff_m_het_div_k_het,\n",
+    "                                         xs_jnp_preloss[:,-1,:],     # initial condition VECTOR\n",
+    "                                         len(circuit_genes), len(circuit_miscs), circuit_name2pos,\n",
+    "                                         cellmodel_auxil.synth_gene_params_for_jax(par, circuit_genes), # synthetic gene parameters for calculating k values\n",
+    "                                         tf_afterloss, tau, tau_odestep, tau_savetimestep,    # simulation parameters: time frame, tau leap step size, number of ode integration steps in a single tau leap step\n",
+    "                                         mRNA_count_scales, S, circuit_synpos2genename, # mRNA count scaling factor, stoichiometry matrix, synthetic gene number in list of synth. genes to name decoder\n",
+    "                                         final_keys_preloss, rep_phase_means_stdevs_bounds,\n",
+    "                                         avg_dynamics=True)  # starting random number genereation key\n",
+    "# concatenate the results with the deterministic simulation\n",
+    "ts = np.concatenate((ts_preloss, np.array(ts_jnp)))\n",
+    "xs_first = np.concatenate((xs_first_preloss, np.array(xs_jnp[1])))  # getting the results from the first random number generator key in vmap\n",
+    "xss = np.concatenate((xss_preloss, np.array(xs_jnp)), axis=1)  # getting the results from all vmapped trajectories"
    ],
    "id": "23b08999d5441790",
    "outputs": [],
    "execution_count": 40
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-20T15:15:58.897673Z",
-     "start_time": "2024-10-20T15:15:58.888415Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "xs_first=np.load('../xs_first35.npy')\n",
-    "ts=np.load('../ts35.npy')\n",
-    "xss=np.load('../xss35.npy')"
-   ],
-   "id": "bd95eda6fa75587a",
-   "outputs": [],
-   "execution_count": 41
   },
   {
    "metadata": {
