--- a/FigS7/varvol_find_scaling.ipynb
+++ b/FigS7/varvol_find_scaling.ipynb
@@ -123,8 +123,8 @@
     "# PARAMETERISE THE CIRCUIT\n",
     "\n",
     "# BURDENSOME SYNTHETIC GENE\n",
-    "par['c_b'] = 1\n",
-    "par['a_b'] = 1e5\n",
+    "par['c_b'] = 1  # gene concentration (nM) - a parameter in the fixed-volume model\n",
+    "par['a_b'] = 1e5    # promoter strength (unitless)\n",
     "\n",
     "# PUNISHER\n",
     "# switch gene conc\n",
@@ -165,9 +165,9 @@
     "\n",
     "# culture medium\n",
     "nutr_qual = 0.5\n",
-    "par['s'] = nutr_qual  # nutrient quality (unitless)\n",
-    "init_conds['s'] = nutr_qual  # nutrient quality (unitless)\n",
-    "par['h_ext']=10.5*(10**3)"
+    "par['s'] = nutr_qual  # nutrient quality (unitless) - a parameter in the variable-volume model\n",
+    "init_conds['s'] = nutr_qual  # nutrient quality (unitless) - a variable in the fixed-volume model\n",
+    "par['h_ext']=10.5*(10**3)   # chloramphenicol concentration in the medium (nM)"
    ],
    "id": "4b8dca372274293b",
    "outputs": [],
